# logsensing

./: .gitignore  README.md  pyproject.toml
docs/: logsensing-agent-dev.md  plan.md  spec.md  task.md  test.md  todo.md
docs/superpowers/skills/logsensing/: SKILL.md
docs/superpowers/skills/logsensing/references/: cli-workflows.md
docs/superpowers/specs/: 2026-05-12-logsensing-skill-design.md  2026-05-12-playbook-manifest-extensibility-design.md
samples/: README.md
scripts/: sync_logsensing_skill.sh
src/logsensing/: __init__.py  cli.py  config.py  serialwrap_powercycle.py
src/logsensing/agent/: __init__.py  interactive.py  llm.py  rca.py  tools.py
src/logsensing/analyzer/: __init__.py  baseline.py  detector.py  exporter.py  reporter.py
src/logsensing/parser/: __init__.py  aaak.py  demux.py  drain.py  splitter.py
src/logsensing/platform/: __init__.py  base.py  bdk.py  prplos.py  registry.py
src/logsensing/rag/: __init__.py  bm25.py  chunker.py  memory.py  retriever.py  turboquant.py  vector.py
tests/: conftest.py  test_aaak.py  test_agent.py  test_analyzer.py  test_cli.py  test_demux.py  test_drain.py  test_exporter.py  test_logsensing_skill_assets.py  test_logsensing_skill_readme.py  test_logsensing_skill_sync.py  test_platform.py  test_playbook.py  test_rag.py  test_rag_memory.py  test_reporter.py  test_serialwrap_powercycle.py  test_splitter.py  test_tools.py
tests/playbook/: agent_cases.yaml  analyzer_cases.yaml  coverage_matrix.yaml  fixtures_manifest.yaml  parser_cases.yaml  platform_cases.yaml  reporter_cases.yaml
