[project]
name = "logsensing"
version = "0.1.0"
description = "系統日誌自動化分析與 AI 診斷工具"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "drain3>=0.9.11",
    "typer>=0.15",
    "rich>=13.0",
    "pydantic>=2.0",
    "opentelemetry-api>=1.20",
]

[project.optional-dependencies]
agent = [
    "openai>=1.0",
    "httpx>=0.27",
]
rag = [
    "faiss-cpu>=1.7",
    "rank-bm25>=0.2",
    "sentence-transformers>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.10",
]

[project.scripts]
logsensing = "logsensing.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logsensing"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["drain3.*", "opentelemetry.*", "rank_bm25.*", "faiss.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
